fix: desativando dark mode por problemas estéticos provisórios

--- a/Client/DeepFitFront/src/assets/base.css
+++ b/Client/DeepFitFront/src/assets/base.css
@@ -40,8 +40,8 @@
 
 
 
-
-@media (prefers-color-scheme: dark) {
+/* DESATIVANDO O MODO DARK PROVISORIAMENTE POR ALGUNS PROBLEMAS DA COMPATIBILIDADE  */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -53,7 +53,7 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
+} */
 
 *,
 *::before,
